// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Placeholder Animated 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "opacity": 0.5,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "70%",
          },
          Array [
            Object {
              "height": 10,
            },
            Object {
              "backgroundColor": "#CFD8DC",
            },
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`Storyshots Placeholder Default 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#efefef",
            "borderRadius": 3,
            "height": 12,
            "marginBottom": 12,
            "width": "70%",
          },
          Array [
            Object {
              "height": 10,
            },
            Object {
              "backgroundColor": "#CFD8DC",
            },
          ],
        ]
      }
    />
  </View>
</View>
`;
